<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttractionsActivity"
    android:background="@drawable/poster_50_g_blur_270x450">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayoutMainScreen"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowLayout1"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/Schedule_Activity_Label"
                android:id="@+id/btnSchedule"
                android:onClick="openPerformersActivity"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/Map_Activity_Label"
                android:id="@+id/btnMap"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:onClick="openMapActivity" />

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/Performers_Activity_Label"
                android:id="@+id/btnPerformers"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:onClick="openPerformersActivity" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowLayout2"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/Sponsors_Activity_Label"
                android:id="@+id/btnSponsors"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="Statics"
                android:id="@+id/btnStatistics"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:onClick="openStaticsActivity"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="Exhibitors"
                android:id="@+id/btnExhibitors"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_column="2"
                android:onClick="openExhibitorsActivity"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowLayout3"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="Food"
                android:id="@+id/btnFood"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="Vendors"
                android:id="@+id/btnVendors"
                android:onClick="openContactActivity"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp" />
        </TableRow>
    </TableLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/marquee_layout" />

</RelativeLayout>
